--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,111 @@
 body {
+  margin: 0;
+  overflow: hidden;
   background-color: #0e0e10;
   color: #fff;
 }
 
 .container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   height: 100vh;
+}
+
+.navigation {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.navigation.top {
+  margin-bottom: auto;
+}
+
+.navigation.bottom {
+  margin-top: auto;
+}
+
+.arrow {
+  margin: 10px;
+  font-size: 40px;
+  cursor: pointer;
+  color: white;
+}
+
+.arrow:hover {
+  color: #9147ff;
+}
+
+@keyframes slideOutDown {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  to {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+}
+
+@keyframes slideOutUp {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  to {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+}
+
+@keyframes slideInDown {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInUp {
+  from {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.slide-out-down {
+  animation: slideOutDown 0.5s ease-in-out;
+  transform: translateY(-100%);
+  opacity: 0;
+}
+
+.slide-out-up {
+  animation: slideOutUp 0.5s ease-in-out;
+  transform: translateY(100%);
+  opacity: 0;
+}
+
+.slide-in-down {
+  animation: slideInDown 0.5s ease-in-out;
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.slide-in-up {
+  animation: slideInUp 0.5s ease-in-out;
+  transform: translateY(0);
+  opacity: 1;
 }
